cmake_minimum_required(VERSION 3.10)
project(CMDU)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_CXX_STANDARD 11)
set(QT Widgets Svg)
find_package(Qt5 REQUIRED ${QT})
include_directories(interfaces)
add_library(${PROJECT_NAME} SHARED ${DDE_DOCK_INTERFACES} cmduplugin.h cmduplugin.cpp cmduwidget.h cmduwidget.cpp)
qt5_use_modules(${PROJECT_NAME} ${QT})
install(TARGETS ${PROJECT_NAME} DESTINATION /usr/lib/dde-dock/plugins/)